--- a/src/app/components/experience.component.scss
+++ b/src/app/components/experience.component.scss
@@ -43,12 +43,12 @@
 
   /* Your styles for medium screens */
   .ex-title {
-    font-size: 15vw;
+    font-size: 16vw;
     width: 100%;
     font-weight: bold;
     //overflow: hidden;
     padding: 10vh 0;
-    margin: 0 10vw;
+    margin: 0 5vw;
   }
 
 }
